# GameJam

./: .gitattributes  Cargo.toml  flake.nix
assets/: anglershark.glb  marker.glb  speaker.glb  terrain.glb
src/: debug.rs  ladder.rs  main.rs  marker.rs  monster.rs  node.rs  particle.rs  player.rs  settings.rs  speaker.rs  ui.rs  world.rs
src/player/: action.rs  flashlight.rs  marker.rs  mod.rs  movement.rs  spawn.rs
